--- a/demineur.ipynb
+++ b/demineur.ipynb
@@ -2,18 +2,242 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 2\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 2\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 3\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 3\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 4\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 4\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 5\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 5\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 6\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 6\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 7\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 7\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 8\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 8\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 9\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 9\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 0\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 0\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 1\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 1\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 2\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 2\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 3\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 3\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 4\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 4\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 5\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 5\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 6\n",
+      "2 <-- 1\n",
+      "====================================================\n",
+      "====================================================\n",
+      "2 <-- 0\n",
+      "====================================================\n",
+      "====================================================\n",
+      "1 <-- 6\n",
+      "2 <-- 1\n",
+      "====================================================\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<__main__.Demineur at 0x25e1862c288>"
+       "<__main__.Demineur at 0x26037fb5808>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +310,7 @@
     "            for i in range(nCadrans):\n",
     "                self.cadrans.append(Afficheur(self.tk, self.size))\n",
     "            for c in self.cadrans:\n",
-    "                c.pack(side = RIGHT)\n",
+    "                c.pack(side = LEFT)\n",
     "            self.master.bind('<Escape>',self.quitter)\n",
     "            self.initialisation()\n",
     "\n",
@@ -118,55 +342,15 @@
     "            fichier.close()\n",
     "            self.splitter = splitter\n",
     "        \n",
-    "        def write(self, pseudo, score):\n",
+    "        def write(self, pseudo, score, tailleX, tailleY, nbMines):\n",
     "            fichier = open(\"scores.stats\", \"a\")\n",
     "            pseudo = pseudo.replace(self.splitter, \"\")\n",
     "            if(pseudo != \"\"):\n",
-    "                pseudo = self.encode(pseudo)\n",
-    "                score = self.reverse(score)\n",
-    "                fichier.write(\"\\n\" + pseudo + \"__SPLITTER__\" + score)\n",
+    "                fichier.write(pseudo + \"__SPLITTER__\" + str(score) + \"__SPLITTER__\" + str(tailleX) + \"x\" + str(tailleY) + \"__SPLITTER__\" + str(nbMines) + \"\\n\")\n",
     "                fichier.close()\n",
     "                return True\n",
     "            fichier.close()\n",
     "            return False\n",
-    "\n",
-    "        def encode(self, string):\n",
-    "            return ''.join(format(i, 'b') for i in bytearray(string, encoding ='utf-8'))\n",
-    "\n",
-    "        def encodeList(self, listToEncode):\n",
-    "            listToReturn=[]\n",
-    "            for string in listToEncode:\n",
-    "                listToReturn.append(self.encode(string))\n",
-    "            return listToReturn\n",
-    "        \n",
-    "        def decode(self, bin_data):\n",
-    "            str_data = ''\n",
-    "            for i in range(0, len(bin_data), 7):\n",
-    "                temp_data = bin_data[i:i + 7]\n",
-    "                decimal_data = int(temp_data, 2)\n",
-    "                str_data = str_data + chr(decimal_data)\n",
-    "            return str_data\n",
-    "\n",
-    "        def decodeList(self, listToDecode):\n",
-    "            listToReturn=[]\n",
-    "            for bin_data in listToDecode:\n",
-    "                listToReturn.append(self.decode(bin_data))\n",
-    "            return listToReturn\n",
-    "            \n",
-    "        def reverse(self, string):\n",
-    "            gnirts = \"\"\n",
-    "            for l in reversed(string):\n",
-    "                gnirts += l\n",
-    "            return gnirts\n",
-    "            \n",
-    "        def reverseList(self, listToReverse):\n",
-    "            listToReturn=[]\n",
-    "            for string in listToReverse:\n",
-    "                gnirts = \"\"\n",
-    "                for l in reversed(string):\n",
-    "                    gnirts += l\n",
-    "                listToReturn.append(gnirts)\n",
-    "            return listToReturn\n",
     "\n",
     "        def read(self):\n",
     "            fichier = open(\"scores.stats\", \"r\")\n",
@@ -182,20 +366,8 @@
     "            return out\n",
     "#=================================================\n",
     "class Demineur():\n",
-    "    '''\n",
-    "    #== Variables de lancement d'une partie ==\n",
-    "    NB_LINES=10\n",
-    "    NB_COLS=5\n",
-    "    #None ou un nombre de mines:\n",
-    "    FORCAGE_MINES=None\n",
-    "    DECALAGE=5\n",
-    "    SIDE_W=25*NB_COLS+DECALAGE*2-1\n",
-    "    SIDE_H=25*NB_LINES+DECALAGE*2-1\n",
-    "    perdu=False\n",
-    "    #=========================================\n",
-    "    '''\n",
     "\n",
-    "    def __init__(self, NombreColonnes=5, NombreLignes=10, ForcageNombreMines=None, OldSchool=True, DEBUG = False):\n",
+    "    def __init__(self, NombreColonnes=5, NombreLignes=10, ForcageNombreMines=None, Difficulte=10, OldSchool=True, DEBUG = False):\n",
     "        self.__DEBUG__ = DEBUG\n",
     "        self.OLD_SCHOOL = OldSchool\n",
     "        self.NB_LINES=NombreLignes\n",
@@ -206,7 +378,7 @@
     "        self.SIDE_H=25*self.NB_LINES+self.DECALAGE*2-1\n",
     "        self.nbMinesTrouver=0\n",
     "        #difficulte de 1 à 20 (4/9/14/19/24/29/34/39/44/49/54/59/64/69/74/79/84/89/94/99% de mines)\n",
-    "        self.difficulte=1\n",
+    "        self.difficulte=Difficulte\n",
     "        if(self.FORCAGE_MINES==None):\n",
     "            self.nbMines=int((self.NB_LINES*self.NB_COLS)*((0.05*(self.difficulte%21))-0.01))\n",
     "            if (self.nbMines+9) >= (self.NB_LINES*self.NB_COLS):\n",
@@ -499,7 +671,9 @@
     "        print(\"Pseudo:\", pseudo)\n",
     "        print(\"Score:\", self.score)\n",
     "        print(\"Nombre de mines:\", self.nbMines)\n",
-    "        print(\"Taille grille (X Y):\", self.NB_COLS, self.NB_LINES) #ajouter le score à la liste\n",
+    "        print(\"Taille grille (X Y):\", self.NB_COLS, self.NB_LINES)\n",
+    "        #ajouter le score à la liste:\n",
+    "        self.scores.write(pseudo, self.score, self.NB_COLS, self.NB_LINES, self.nbMines)\n",
     "        self.labelPseudo.destroy()\n",
     "        self.entryPseudo.destroy()\n",
     "        self.buttonPseudo.destroy()\n",
@@ -507,7 +681,8 @@
     "\n",
     "\n",
     "#===============Programme Principal===============\n",
-    "Demineur(OldSchool=True)\n",
+    "#Demineur(OldSchool=True)\n",
+    "Demineur(NombreColonnes=5, NombreLignes=10, ForcageNombreMines=None, Difficulte=2, OldSchool=True, DEBUG = False)\n",
     "#================================================="
    ]
   },
