--- a/demineur.ipynb
+++ b/demineur.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 145,
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,8 @@
       "|3    \t3    \t3    \t3    \t3    \t|\n",
       "----------------------------------------\n",
       "Partie gagné !\n",
-      "Pseudo: sdfghjk\n",
+      "Cheat ? True\n",
+      "Pseudo: test\n",
       "Score: 0\n",
       "Nombre de mines: 0\n",
       "Taille grille (X Y): 5 10\n"
@@ -50,10 +51,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Demineur at 0x276143c1988>"
+       "<__main__.Demineur at 0x27612c3d788>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +166,7 @@
     "\n",
     "    def __init__(self, NombreColonnes=5, NombreLignes=10, ForcageNombreMines=None, Difficulte=10, OldSchool=True, DEBUG = False):\n",
     "        self.__DEBUG__ = DEBUG\n",
+    "        self.cheat=False\n",
     "        self.OLD_SCHOOL = OldSchool\n",
     "        self.NB_LINES=NombreLignes\n",
     "        self.NB_COLS=NombreColonnes\n",
@@ -212,6 +214,7 @@
     "        self.cnv=Canvas(self.root, width=self.SIDE_W, height=self.SIDE_H, bg=\"white\")\n",
     "        self.cnv.bind(\"<Button-1>\", self.ClicGauche)\n",
     "        self.cnv.bind(\"<Button-3>\", self.ClicDroit)\n",
+    "        self.root.bind(\"<Control-Shift-KeyPress-C>\", self.LeCheatInfernal)\n",
     "        self.cnv.grid(row=1, column=1)\n",
     "        #Score:\n",
     "        self.scores = Scores()\n",
@@ -222,6 +225,13 @@
     "        self.grille=self.generationGrilleVide()\n",
     "        self.refreshScreen()\n",
     "        self.root.mainloop()\n",
+    "    \n",
+    "    def LeCheatInfernal(self, event):\n",
+    "        if self.depart==True:\n",
+    "            print(\"CheatInfernal activé! Aucunes mines!\")\n",
+    "            self.cheat=True\n",
+    "            self.root.title(\"Démineur \" + str(self.NB_COLS) + \"x\" + str(self.NB_LINES) + \" [CheatInfernal]\")\n",
+    "            self.nbMines=0\n",
     "\n",
     "    #Indiquer la case par un drapeau/un point d'interrogation/rien:\n",
     "    def ClicDroit(self, event):\n",
@@ -470,12 +480,16 @@
     "    def addScore(self, pseudo):\n",
     "        #Debug:\n",
     "        if self.__DEBUG__ :\n",
+    "            print(\"Cheat ?\", self.cheat)\n",
     "            print(\"Pseudo:\", pseudo)\n",
     "            print(\"Score:\", self.score)\n",
     "            print(\"Nombre de mines:\", self.nbMines)\n",
     "            print(\"Taille grille (X Y):\", self.NB_COLS, self.NB_LINES)\n",
     "        #ajouter le score à la liste:\n",
-    "        self.scores.write(pseudo, self.score, self.NB_COLS, self.NB_LINES, self.nbMines)\n",
+    "        if self.cheat:\n",
+    "            self.scores.write(pseudo + \" cheateur\", self.score, self.NB_COLS, self.NB_LINES, self.nbMines)\n",
+    "        else:\n",
+    "            self.scores.write(pseudo, self.score, self.NB_COLS, self.NB_LINES, self.nbMines)\n",
     "        self.labelPseudo.destroy()\n",
     "        self.entryPseudo.destroy()\n",
     "        self.buttonPseudo.destroy()\n",
@@ -485,7 +499,7 @@
     "\n",
     "#===============Programme Principal===============\n",
     "#Demineur(OldSchool=True)\n",
-    "Demineur(NombreColonnes=5, NombreLignes=10, ForcageNombreMines=0, Difficulte=2, OldSchool=True, DEBUG = True)\n",
+    "Demineur(NombreColonnes=5, NombreLignes=10, ForcageNombreMines=None, Difficulte=2, OldSchool=True, DEBUG = True)\n",
     "#================================================="
    ]
   },
