LifeMode implémenté (Mode de jeu secondaire)

--- a/demineur.ipynb
+++ b/demineur.ipynb
@@ -8,9 +8,28 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\vince\\Anaconda3\\lib\\tkinter\\__init__.py\", line 1705, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\vince\\Desktop\\ProjetPython-master\\ProjetPython-master\\demineur.py\", line 132, in quelBouton\n",
+      "    self.manchePerdueLifeMode()\n",
+      "  File \"C:\\Users\\vince\\Desktop\\ProjetPython-master\\ProjetPython-master\\demineur.py\", line 260, in manchePerdueLifeMode\n",
+      "    self.lifes_victoires.configure(text=\"Victoires : \" + str(self.lifemode_score))\n",
+      "  File \"C:\\Users\\vince\\Anaconda3\\lib\\tkinter\\__init__.py\", line 1485, in configure\n",
+      "    return self._configure('configure', cnf, kw)\n",
+      "  File \"C:\\Users\\vince\\Anaconda3\\lib\\tkinter\\__init__.py\", line 1476, in _configure\n",
+      "    self.tk.call(_flatten((self._w, cmd)) + self._options(cnf))\n",
+      "_tkinter.TclError: invalid command name \".!label\"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<demineur.Demineur at 0x152b579b588>"
+       "<demineur.Demineur at 0x1880098a408>"
       ]
      },
      "execution_count": 1,
@@ -40,7 +59,7 @@
     "#       False=non, True=oui\n",
     "#DEBUG : Affiche les messages en console. (par défaut : False)\n",
     "#        False=non, True=oui\n",
-    "Demineur(nombreColonnes=5, nombreLignes=10, forcageNombreMines=None, difficulte=9, oldSchool=True, afficheurOldSchoolVisible=True, mute=False, DEBUG = False)\n",
+    "Demineur(nombreColonnes=5, nombreLignes=10, forcageNombreMines=None, difficulte=2, oldSchool=True, afficheurOldSchoolVisible=True, lifeMode=3, mute=False, DEBUG = False)\n",
     "#================================================="
    ]
   },
