Multiples ajouts et résolution de bugs
+ Menu principal
+ Menu options
+ Affichage des scores (scoreboard)
+ Ajout de la sauvegarde des options
+ Ajout de multiples couleurs suivant le nombre de mines aux alentours
+ Modification du cheat, c'est désormais une transparence des cases
+ Modification de l'enregistrement des scores
+ Modification de certains éléments de l'afficheur 7 segments
+ Modification de l'évènement de fermeture de fenêtre

--- a/demineur.ipynb
+++ b/demineur.ipynb
@@ -3,33 +3,55 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\vince\\Anaconda3\\lib\\tkinter\\__init__.py\", line 1705, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\vince\\Desktop\\ProjetPython-master\\ProjetPython-master\\demineur.py\", line 132, in quelBouton\n",
-      "    self.manchePerdueLifeMode()\n",
-      "  File \"C:\\Users\\vince\\Desktop\\ProjetPython-master\\ProjetPython-master\\demineur.py\", line 260, in manchePerdueLifeMode\n",
-      "    self.lifes_victoires.configure(text=\"Victoires : \" + str(self.lifemode_score))\n",
-      "  File \"C:\\Users\\vince\\Anaconda3\\lib\\tkinter\\__init__.py\", line 1485, in configure\n",
-      "    return self._configure('configure', cnf, kw)\n",
-      "  File \"C:\\Users\\vince\\Anaconda3\\lib\\tkinter\\__init__.py\", line 1476, in _configure\n",
-      "    self.tk.call(_flatten((self._w, cmd)) + self._options(cnf))\n",
-      "_tkinter.TclError: invalid command name \".!label\"\n"
+      "=========[Scoreboard]=========\n",
+      "['DJ_Vince [cheateur]', '94', '8x15', '34']\n",
+      "['DJ_Vince [cheateur]', '95', '8x15', '34']\n",
+      "['DJ_Vince [cheateur]', '22', '8x15', '10']\n",
+      "['DJ_Vince [cheateur]', '22', '8x15', '10']\n",
+      "['DJ_Vince', '27', '8x15', '10']\n",
+      "['DJ_Vince', '7', '8x15', '4']\n",
+      "['azerty [cheateur]', '12', '8x15', '4']\n",
+      "['edrtyghuj', '10', '8x15', '4']\n",
+      "['rtyhj', '10', '8x15', '4']\n",
+      "['zertyjk', '22', '8x15', '4']\n",
+      "['vince', '7', '8x15', '4']\n",
+      "['qfghjk', '7', '8x15', '4']\n",
+      "['vince', '17', '8x15', '4']\n",
+      "['Youpi!', '9', '8x15', '4']\n",
+      "==============================\n",
+      "====[Scoreboard  LifeMode]====\n",
+      "['DJ_Vince', '1']\n",
+      "['DJ_Vince', '4']\n",
+      "==============================\n",
+      "=========[Scoreboard]=========\n",
+      "['DJ_Vince [cheateur]', '94', '8x15', '34']\n",
+      "['DJ_Vince [cheateur]', '95', '8x15', '34']\n",
+      "['DJ_Vince [cheateur]', '22', '8x15', '10']\n",
+      "['DJ_Vince [cheateur]', '22', '8x15', '10']\n",
+      "['DJ_Vince', '27', '8x15', '10']\n",
+      "['DJ_Vince', '7', '8x15', '4']\n",
+      "['azerty [cheateur]', '12', '8x15', '4']\n",
+      "['edrtyghuj', '10', '8x15', '4']\n",
+      "['rtyhj', '10', '8x15', '4']\n",
+      "['zertyjk', '22', '8x15', '4']\n",
+      "['vince', '7', '8x15', '4']\n",
+      "['qfghjk', '7', '8x15', '4']\n",
+      "['vince', '17', '8x15', '4']\n",
+      "['Youpi!', '9', '8x15', '4']\n",
+      "==============================\n",
+      "['0', '0', '8', '15', '1', '3']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<demineur.Demineur at 0x1880098a408>"
+       "<menu.Menu at 0x26cdef8fe08>"
       ]
      },
      "execution_count": 1,
@@ -39,36 +61,13 @@
    ],
    "source": [
     "#=====================import======================\n",
-    "from demineur import Demineur\n",
+    "from menu import Menu\n",
     "#=================================================\n",
     "\n",
     "#===============Programme Principal===============\n",
-    "#nombreColonnes : Nombre de colonnes du démineur. (à partir de 1) (par défaut: 5)\n",
-    "#nombreLignes : Nombre de lignes du démineur. (à partir de 1) (par défaut: 10)\n",
-    "#forcageNombreMines : Force le nombre de mines du démineur (à partir de 0),\n",
-    "#                     si mis à None, ce nombre est généré suivant la difficulté. (par défaut: None)\n",
-    "#difficulte : Difficulté du démineur (de 1 à 20) (par défaut: 10)\n",
-    "#oldSchool : apparance des compteurs du démineur,\n",
-    "#            si mise à True, elle sera comme sous le démineur Windows, à l'ancienne. (par défaut)\n",
-    "#            si mise à False, elle sera moderne et sobre.\n",
-    "#afficheurOldSchoolVisible : visibilité des segments non-éclairés. (par défaut: False)\n",
-    "#                            False=non, True=oui\n",
-    "#lifeMode : Mode parties infinie avec un nombre de vie de départ. (par défaut: None)\n",
-    "#           Si activé, entrer un nombre de vie de départ. (exemple : 3)\n",
-    "#mute : Détermine si le son est coupé au démarrage de la partie. (par défaut : False)\n",
-    "#       False=non, True=oui\n",
-    "#DEBUG : Affiche les messages en console. (par défaut : False)\n",
-    "#        False=non, True=oui\n",
-    "Demineur(nombreColonnes=5, nombreLignes=10, forcageNombreMines=None, difficulte=2, oldSchool=True, afficheurOldSchoolVisible=True, lifeMode=3, mute=False, DEBUG = False)\n",
+    "Menu()\n",
     "#================================================="
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
